(lang dune 2.9)
(name "sail-pl")
(version 0.1)
(using menhir 2.0)
(generate_opam_files true)

(license GPL) 
(authors "Frederic Dabrowski")
(maintainers "sail-pl-maintainers@listes.univ-orleans.fr")
(homepage "https://sail-pl.github.io")
(bug_reports "https://sail-pl.github.io")

(package
  (name "sail-pl")
  (synopsis "SAIL: Safe Interactive Language")
  (description "SAIL means Safe Interactive Language.")
  (depends 
    (ocaml (>= 4.13.1))
    (dune (>= 2.9))
    (core (>= 0.15.0))
    (core_unix (>= 0.15.0))
    (fmt  (>= 0.9.0))
    (menhir (>= 2.0))
    (logs (>= 0.7))
    (mtime (>= 1.3.0))
    (llvm (>= 13.0.0))
    ))
